Drag and drop items inside inventory slots - work in progress

--- a/src/components/Modal/Profil/Profil.css
+++ b/src/components/Modal/Profil/Profil.css
@@ -2,3 +2,9 @@
   width: 80px;
   height: 80px;
 }
+
+.img-avatar {
+  background-image: url("@/assets/mage.png");
+  width: 155px;
+  height: 155px;
+}
